# AA-LABS

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
.zed/: settings.json
lab1/: CMakeLists.txt  main.c  methods.c  methods.h
lab1/report/: report.typ
lab2/: CMakeLists.txt  main.c  smoothsort.c  sortings.c  utils.c
lab2/include/: sortings.h  utils.h
lab2/report/: report.typ
utils/lab_1/: generate.sh  main.py
utils/lab_2/: generate.sh  main.py  test_cases.py
